fix for reveal modal on small

--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -1,3 +1,8 @@
+/*fix for reveal modal on small*/
+html{
+    overflow:hidden;
+}
+
 body.hide-scroll {
     overflow-y: hidden;
 }
